feat: move to yarn 4

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ report.txt
 
 # Package Lock Files
 package-lock.json
+yarn.lock
 
 # Dependencies
 node_modules/
@@ -17,3 +18,10 @@ dist/
 
 # Reports
 report.txt
+
+# Config
+vite.config.js.timestamp-*
+
+# yarn
+.pnp.cjs
+.pnp.loader.mjs
