--- a/package.json
+++ b/package.json
@@ -1,11 +1,30 @@
 {
-  "name": "deepseek-chat-exporter",
+  "name": "deepseek-export",
   "version": "1.0.0",
+  "description": "A Firefox extension to export your DeepSeek chat histories as HTML files which you can save locally and share with others.",
+  "main": "index.js",
   "scripts": {
-    "build": "vite build"
+    "dev": "vite",
+    "build": "vite build",
+    "lint": "eslint .",
+    "format": "prettier --write ."
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/da2ce7/deepseek-export.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/da2ce7/deepseek-export/issues"
+  },
+  "homepage": "https://github.com/da2ce7/deepseek-export#readme",
   "devDependencies": {
+    "eslint": "^9.31.0",
+    "prettier": "^3.6.2",
     "vite": "^7.0.5",
     "vite-plugin-static-copy": "^3.1.1"
-  }
+  },
+  "packageManager": "yarn@4.9.2"
 }
