--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "1.0.0",
   "description": "A Firefox extension to export your DeepSeek chat histories as HTML files which you can save locally and share with others.",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "vite build && vite build --config vite.background.config.js",
     "lint": "eslint .",
     "format": "prettier --write ."
   },
@@ -22,9 +23,13 @@
   "homepage": "https://github.com/da2ce7/deepseek-export#readme",
   "devDependencies": {
     "eslint": "^9.31.0",
+    "globals": "^16.3.0",
     "prettier": "^3.6.2",
     "vite": "^7.0.5",
     "vite-plugin-static-copy": "^3.1.1"
   },
-  "packageManager": "yarn@4.9.2"
+  "packageManager": "yarn@4.9.2",
+  "dependencies": {
+    "dompurify": "^3.2.6"
+  }
 }
