feat: convert project to typescript
- Rename all .js files to .ts
- Add and configure tsconfig.json
- Update vite configs for typescript
- Update manifest.json for background script
- Add typescript and type definitions
- Fix type errors
- Setup yarn pnp for vscode

--- a/manifest.json
+++ b/manifest.json
@@ -10,7 +10,8 @@
   "permissions": ["downloads"],
   "host_permissions": ["https://chat.deepseek.com/*"],
   "background": {
-    "scripts": ["dist/background/background.js"]
+    "scripts": ["dist/background/background.js"],
+    "type": "module"
   },
   "content_scripts": [
     {
