--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build && vite build --config vite.background.config.js",
-    "lint": "eslint .",
+    "lint": "eslint src",
     "format": "prettier --write ."
   },
   "repository": {
@@ -25,7 +25,10 @@
     "@types/chrome": "^0.1.1",
     "@types/dompurify": "^3.2.0",
     "@types/node": "^24.1.0",
+    "@typescript-eslint/eslint-plugin": "^8.3.0",
+    "@typescript-eslint/parser": "^8.3.0",
     "eslint": "^9.31.0",
+    "eslint-plugin-unicorn": "^55.0.0",
     "globals": "^16.3.0",
     "prettier": "^3.6.2",
     "typescript": "^5.8.3",
