--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build && vite build --config vite.background.config.js",
+    "build": "vite build",
     "lint": "eslint src",
     "format": "prettier --write ."
   },
@@ -25,6 +25,7 @@
     "@types/chrome": "^0.1.1",
     "@types/dompurify": "^3.2.0",
     "@types/node": "^24.1.0",
+    "@types/showdown": "^2.0.6",
     "@typescript-eslint/eslint-plugin": "^8.3.0",
     "@typescript-eslint/parser": "^8.3.0",
     "eslint": "^9.31.0",
@@ -37,6 +38,7 @@
   },
   "packageManager": "yarn@4.9.2",
   "dependencies": {
-    "dompurify": "^3.2.6"
+    "dompurify": "^3.2.6",
+    "showdown": "^2.1.0"
   }
 }
