--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,7 @@
     "48": "src/assets/icon-48.png",
     "96": "src/assets/icon-96.png"
   },
-  "permissions": ["downloads"],
+  "permissions": ["downloads", "scripting"],
   "host_permissions": ["https://chat.deepseek.com/*"],
   "background": {
     "scripts": ["dist/background.js"],
